--- a/Presentation/Secondhand/secondhand.css
+++ b/Presentation/Secondhand/secondhand.css
@@ -5,13 +5,14 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #F3F2ED;
+  background-color: #f3f2ed;
   /* overflow-x: hidden; */
   font-family: "Pretendard", sans-serif;
 }
+
 /*mouseover*/
 #wrap {
-  background-color: #3F3E39;
+  background-color: #3f3e39;
   height: 70px;
   display: flex;
   align-items: center;
@@ -29,81 +30,81 @@ body {
 }
 l,
 li {
-list-style: none;
+  list-style: none;
 }
 
 a {
-text-decoration: none;
-color: black;
+  text-decoration: none;
+  color: black;
 }
 #header {
-position: fixed;
-width: 100%;
-left: 0;
-padding: 0 30px;
-box-sizing: border-box;
-display: flex;
-justify-content: center; /* 중앙 정렬 */
-align-items: center; /* 수직 중앙 정렬 */
+  position: fixed;
+  width: 100%;
+  left: 0;
+  padding: 0 30px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center; /* 중앙 정렬 */
+  align-items: center; /* 수직 중앙 정렬 */
 }
 #gnb > li {
-position: relative;
-margin: 0; /* 부모 요소의 마진 제거 */
+  position: relative;
+  margin: 0; /* 부모 요소의 마진 제거 */
 }
 #gnb > li > a {
-color: #ffffff; /* 기본 글씨 색상 */
-text-decoration: none; /* 기본 링크 스타일 제거 */
-padding: 10px; /* 링크에 패딩 추가 */
-margin: 0; /* 링크 마진 제거 */
-display: block; /* 링크를 블록 요소로 변환하여 전체 영역 클릭 가능 */
+  color: #ffffff; /* 기본 글씨 색상 */
+  text-decoration: none; /* 기본 링크 스타일 제거 */
+  padding: 10px; /* 링크에 패딩 추가 */
+  margin: 0; /* 링크 마진 제거 */
+  display: block; /* 링크를 블록 요소로 변환하여 전체 영역 클릭 가능 */
 }
 #gnb > li > a:hover {
-border-bottom: 2px solid #ffffff;
+  border-bottom: 2px solid #ffffff;
 }
 #header > #gnb {
-width: 1200px;
-display: flex;
-justify-content: space-evenly;
-align-items: center;
+  width: 1200px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 #header > #gnb::before {
-content: "";
-width: 100%;
-position: absolute;
-top: 50px;
-left: 0;
-height: 120px;
-background: #fff;
-border-bottom: 1px solid #e1e1e1;
-box-shadow: 0px 10px 10px 0px rgba(48, 49, 51, 6%);
-display: none;
+  content: "";
+  width: 100%;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  height: 120px;
+  background: #fff;
+  border-bottom: 1px solid #e1e1e1;
+  box-shadow: 0px 10px 10px 0px rgba(48, 49, 51, 6%);
+  display: none;
 }
 
 #header > #gnb.on::before {
-display: block;
+  display: block;
 }
 #header > #gnb > li .snb {
-position: absolute;
-top: 80px;
-display: none;
+  position: absolute;
+  top: 80px;
+  display: none;
 }
 #header > #gnb.on > li .snb {
-display: block;
-color: #0d3745;
-text-align: center;
+  display: block;
+  color: #0d3745;
+  text-align: center;
 }
 #header > #gnb > li > .snb > ul > li + li {
-margin-top: 20px;
+  margin-top: 20px;
 }
 .snb {
-margin: 0;
-top: calc(100% + 0px);
+  margin: 0;
+  top: calc(100% + 0px);
 }
 .search-container {
   position: relative;
 }
 .search {
-  background-color: #3F3E39;
+  background-color: #3f3e39;
   color: #ffffff;
   padding: 5px 10px 5px 35px;
   height: 30px;
@@ -118,18 +119,15 @@ top: calc(100% + 0px);
   background-size: 15px 15px; /* 이미지 크기 조정 */
 }
 
-/* display */
+/*display*/
 .display {
-  color: #A9A79E;
+  color: #a9a79e;
   font-size: 17px;
   font-weight: 400;
   margin-left: 17px;
-  margin-top: 13px; /* header 아래로 위치시키기 위해 margin-top 조정 */
+  margin-top: 13px;
   margin-bottom: 20px;
-  position: relative; /* 다른 fixed 요소들과의 겹침 방지 */
-  z-index: 1; /* 다른 요소들 위에 표시되도록 z-index 설정 */
 }
-
 
 .footer {
   position: fixed;
@@ -151,18 +149,7 @@ top: calc(100% + 0px);
   height: 50px;
   margin-right: 15px;
 }
-.text {
-  display: flex;
-  flex-direction: column;
-}
-.we {
-  font-weight: 600;
-  font-size: 25px;
-}
-.team {
-  font-weight: 400;
-  font-size: 14px;
-}
+
 .middle-wrapper {
   text-align: center;
   width: 100%; /* 가운데 정렬을 위해 추가 */
@@ -200,7 +187,7 @@ top: calc(100% + 0px);
   right: 20px;
   width: 50px;
   height: 50px;
-  background-color: #3F3E39;
+  background-color: #3f3e39;
   color: white;
   border: none;
   border-radius: 50%;
@@ -211,7 +198,7 @@ top: calc(100% + 0px);
   cursor: pointer;
 }
 .add-button:hover {
-  background-color: #F6C04B;
+  background-color: #f6c04b;
 }
 
 .modal {
@@ -231,7 +218,7 @@ top: calc(100% + 0px);
   background-color: #ffffff;
   margin: 15% auto;
   padding: 20px;
-  border: 1px solid #CFCEC9;
+  border: 1px solid #cfcec9;
   width: 80%;
   max-width: 500px;
   height: auto; /* 높이를 자동으로 설정하여 폼 내용에 맞게 조절 */
@@ -244,7 +231,7 @@ top: calc(100% + 0px);
 h2 {
   text-align: center;
   margin-bottom: 15px !important;
-  color: #3F3E39;
+  color: #3f3e39;
   font-weight: 900 !important;
 }
 
@@ -274,7 +261,7 @@ h2 {
   align-items: center;
   box-sizing: border-box;
   background-color: #ffffff;
-  border: 2px solid #CFCEC9;
+  border: 2px solid #cfcec9;
   padding: 20px;
   margin: 0 auto;
   border-radius: 10px;
@@ -301,7 +288,7 @@ h2 {
 .submit-button {
   width: 100%;
   padding: 10px;
-  background-color: #3F3E39;
+  background-color: #3f3e39;
   color: white;
   border: none;
   border-radius: 5px;
@@ -311,8 +298,8 @@ h2 {
 }
 
 .submit-button:hover {
-  color: #3F3E39;
-  background-color: #F6C04B;
+  color: #3f3e39;
+  background-color: #f6c04b;
 }
 
 .form-group {
